<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        tools:ignore="MissingConstraints">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/menu_main"
            app:title="Donation 1.5" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <TextView
            android:id="@+id/greeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_homer"
            android:layout_marginBottom="32dp"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/plead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_give_generously" />

        <LinearLayout
            android:id="@+id/progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="@id/paypal">

                <RadioButton
                    android:id="@+id/paypal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paypal" />

                <RadioButton
                    android:id="@+id/direct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/direct" />

            </RadioGroup>

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <NumberPicker
                android:id="@+id/picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <ProgressBar
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:indeterminate="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow>

                <TextView
                    android:id="@+id/amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amount" />

                <EditText
                    android:id="@+id/edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    tools:ignore="Autofill,LabelFor" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/donate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/donate" />

                <TextView
                    android:id="@+id/total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/total_so_far_1998"
                    android:textAlignment="center"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        android:importantForAccessibility="no"
        app:srcCompat="@android:drawable/ic_dialog_email"
        tools:ignore="MissingConstraints" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>